# pyqt-telegram-software

./: .gitignore  README.md  gui.ui  main.py  pyproject.toml  ui.py
modules/: base.py  chat_spam.py  client.py  db.py  exit.py  global_vars.py  join.py  messages.py
